# baikal-scp-tool

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindKernelHeaders.cmake
debian/: baikal-scp-modules.install.template  baikal-scp-tool-dev.install  baikal-scp-tool.install  changelog  control  rules
docs/: bm1000-boot-flash.md  write-example-illustration.txt
include/: baikal_scp.h  baikal_scp_lib.h
kernel/: Makefile  baikal_scp_core.c  baikal_scp_flash.c  baikal_scp_ioctl.c  baikal_scp_private.h  baikal_sip_svc_flash.h
userspace/lib/: baikal_scp_lib.c  baikal_scp_lib_flash.c  baikal_scp_lib_private.h
userspace/tool/: baikal_scp_flash.c  baikal_scp_tool.h
